[package]
name = "hue-mqtt"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "=0.6.2"
config = "=0.13.4"
derive_builder = "=0.12.0"
eventsource-client = "=0.12.0"
eyre = "=0.6.9"
futures = "=0.3.29"
hyper = { version = "=0.14.27", features = ["full"] }
hyper-rustls = "=0.24.2"
palette = { version = "=0.7.3", features = ["serializing"] }
rand = "=0.8.5"
rumqttc = "=0.23.0"
rustls-pemfile = "=1.0.4"
serde = { version = "=1.0.193", features = ["derive"] }
serde_json = "=1.0.108"
serde_path_to_error = "=0.1.14"
tokio = { version = "=1.34.0", features = ["macros", "full"] }
tokio-rustls = { version = "=0.24.1", features = ["dangerous_configuration"] }
