[package]
name = "hue-mqtt"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "=0.6.3"
config = "=0.14.0"
derive_builder = "=0.20.0"
eventsource-client = "=0.12.2"
eyre = "=0.6.12"
futures = "=0.3.30"
hyper = { version = "=0.14.28", features = ["full"] }
hyper-rustls = "=0.27.3"
palette = { version = "=0.7.5", features = ["serializing"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
rand = "=0.8.5"
rumqttc = "=0.24.0"
rustls-pemfile = "=1.0.4"
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "=1.0.114"
serde_path_to_error = "=0.1.16"
tokio = { version = "=1.36.0", features = ["macros", "full"] }
tokio-rustls = { version = "=0.24.1", features = ["dangerous_configuration"] }
